fixed alignment of buttons to not overlap; added scrolling chat box;

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,12 @@
 	    float: left;
 	}
 
-	/* div.row {
-	    clear: both;
-	    float: left;
-	} */
+	.tab-pane {
+	    height: 300px;
+	    overflow-y: scroll;
+	    width: 100%;
+	}
+
+	span#chat-history {
+	    max-height: 200px;
+	}
